# security-lab

./: .gitignore  PROJECT_BRIEF.md  README.md
app/vuln-pipeline/: README.md  pyproject.toml
app/vuln-pipeline/.tmp_run/deliverables/: executive_onepager_customer_v1.0.md  full_report_customer_customer_v1.0.md  full_report_internal_customer_v1.0.md  presentation_outline_customer_v1.0.md  remediation_tracker_customer_v1.0.md  review_closure_checklist_customer_v1.0.md
app/vuln-pipeline/.tmp_run/delivery/: checksums.json  customer_submission_checksums.json  customer_submission_manifest.json  delivery_manifest.json  final_delivery_manifest.json  internal_archive_checksums.json  internal_archive_manifest.json
app/vuln-pipeline/.tmp_run/issues/: issue_clusters.json
app/vuln-pipeline/.tmp_run/normalized/: normalized_findings.json
app/vuln-pipeline/.tmp_run/parsed/: parsed_findings.json
app/vuln-pipeline/.tmp_run/report_data/: deliverables_manifest.json  final_report_bundle.json  (+11 more)
app/vuln-pipeline/configs/: mapping_rules.json
app/vuln-pipeline/docs/: real_input_format_reference.md
app/vuln-pipeline/scripts/: check_real_input_readiness.ps1  run_customer_final.ps1  run_internal_archive.ps1  run_phase12_iteration.ps1  run_phase12_rollback.ps1  run_preflight.ps1  run_real_rehearsal.ps1
app/vuln-pipeline/tests/: conftest.py  test_deliverables.py  test_fixture_smoke_e2e.py  test_normalize.py  test_operational_features.py  test_phase10_features.py  test_phase11_features.py  test_phase12_features.py  test_phase9_features.py  test_reporting_features.py  test_rule_engine.py
(+774 files in other folders)
